// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseCardContent snapshot orientation horizontal 1`] = `
<Fragment>
  <a
    className="pgn__card-wrapper-image-cap horizontal"
    href="test-home-url"
  >
    <img
      alt="Course thumbnail"
      className="pgn__card-image-cap"
      src="test-banner-img-src"
    />
  </a>
  <Card.Body>
    <Card.Header
      actions={
        <CourseCardMenu
          cardId="test-card-id"
        />
      }
      title={
        <a
          data-testid="CourseCardTitle"
          href="test-home-url"
        >
          test-course-name
        </a>
      }
    />
    <Card.Section
      className="pt-0"
    >
      <CourseCardDetails
        cardId="test-card-id"
      />
    </Card.Section>
    <Card.Footer
      orientation="vertical"
      textElement={
        <RelatedProgramsBadge
          cardId="test-card-id"
        />
      }
    >
      <CourseCardActions
        cardId="test-card-id"
      />
    </Card.Footer>
  </Card.Body>
</Fragment>
`;

exports[`CourseCardContent snapshot orientation vertical 1`] = `
<Fragment>
  <a
    className="pgn__card-wrapper-image-cap vertical"
    href="test-home-url"
  >
    <img
      alt="Course thumbnail"
      className="pgn__card-image-cap"
      src="test-banner-img-src"
    />
  </a>
  <Card.Body>
    <Card.Header
      actions={
        <CourseCardMenu
          cardId="test-card-id"
        />
      }
      title={
        <a
          data-testid="CourseCardTitle"
          href="test-home-url"
        >
          test-course-name
        </a>
      }
    />
    <Card.Section
      className="pt-0"
    >
      <CourseCardDetails
        cardId="test-card-id"
      />
    </Card.Section>
    <RelatedProgramsBadge
      cardId="test-card-id"
    />
    <Card.Footer
      orientation="horizontal"
    >
      <CourseCardActions
        cardId="test-card-id"
      />
    </Card.Footer>
  </Card.Body>
</Fragment>
`;
